--- a/.github/workflows/sync-daily.yml
+++ b/.github/workflows/sync-daily.yml
@@ -29,7 +29,11 @@ jobs:
             --name $ARTIFACT_NAME \
             --repo woocommerce/woocommerce
 
-      - name: Try gcloud
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: "${{ secrets.SA_KEY_JSON }}"
+
+      - name: Run gsutil and gcloud commands
         run: |
-          gcloud version
-          gcloud config get-value project
+          gsutil ls
